[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "tinycudann"
dynamic = ["version"]
description = "tiny-cuda-nn extension for PyTorch"
readme = {text = "tiny-cuda-nn extension for PyTorch", content-type = "text/plain"}
license = {text = "BSD-3-Clause"}